--- a/dwm.1
+++ b/dwm.1
@@ -92,6 +92,12 @@ Sets monocle layout.
 .B Mod1\-space
 Toggles between current and previous layout.
 .TP
+.B Mod1\-Up
+Cycles backwards in layout list.
+.TP
+.B Mod1\-Down
+Cycles forwards in layout list.
+.TP
 .B Mod1\-j
 Focus next window.
 .TP
